--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "http-errors": "~1.6.3",
     "log4js": "^6.3.0"
   },
