--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "npx tsc",
+    "start": "npx tsc && node ./bin/www",
     "setup": "npx tsc && node ./build/setup/createTable.js"
   },
   "dependencies": {
