--- a/frontend-native/package.json
+++ b/frontend-native/package.json
@@ -16,7 +16,9 @@
     "@react-navigation/drawer": "^5.12.3",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "axios": "^0.21.1",
+    "enzyme-adapter-react-16": "^1.15.6",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "jsdom-global": "^3.0.2",
@@ -51,7 +53,6 @@
     "@types/react-redux": "^7.1.15",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "babel-jest": "^26.6.3",
     "enzyme": "^3.11.0",
     "jest": "^26.6.3",
